--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ section.services .card-warper  {
             <nav id ="main-nav" class="flex item-center justify-between">
                 <div class="left flex item-center">
               <div class="branding">
-                <img src="E:\him\images-for-portfolio\images\logo.svg" alt="">
+                <img src="./logo.svg" alt="">
               </div>
               <div class="hi">
 
@@ -648,7 +648,7 @@ section.services .card-warper  {
            
            
             <div class="flex-1 ">
-              <img src="E:\him\images-for-portfolio\images\2.jpg" alt="">
+              <img src="./2.jpg" alt="">
 
           </div>
           <div  class="flex-1">
