--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ section.services .card-warper  {
             
             <div class="hero flex item-center justify-between">
               <div class="left flex-1 flex justify-center">
-                <img class="my" src="E:\him\images-for-portfolio\images\realme.png" alt="">
+                <img class="my" src="./realme.png" alt="">
             </div>
               <div class="right flex-1">
                 <h6>Himanshu Jadhav</h6>
@@ -758,7 +758,7 @@ section.services .card-warper  {
 </section>
 <footer>
   <div class="fotterlogo">
-  <img src="E:\him\images-for-portfolio\images\logo.svg" alt="">
+  <img src="./logo.svg" alt="">
   </div>
   <div class="footer-social">
 
